@@ -28,6 +28,8 @@ Version 1.7.8
        incorrectly. (Stefan)
 - BUG: Issue #320: segfault when unloading the
        shell extension. (Stefan)
+- BUG: Issue #321: TortoiseMerge asserts
+       on start. (Stefan)
 
 Version 1.7.7
 - BUG: Issue #233: Crash when closing the
